[project]
name = "toss-invest-trader"
version = "0.1.0"
description = "Operationally safe CLI and Python client for Toss Securities Open API trading"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
tosstrader = "toss_invest_trader.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
