[project]
name = "toss-invest-trader"
version = "0.1.0"
description = "Operationally safe CLI and Python client for Toss Securities Open API trading"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
tosstrader = "toss_invest_trader.cli:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.4.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests", "scripts"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-q -m 'not contract_live'"
testpaths = ["tests"]
markers = [
    "contract_live: requires network access to the live Toss OpenAPI document",
]
